# project3

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  DEPLOYMENT.md  Makefile  README.md  SGI_PROMPT_DEMARRAGE.md  docker-compose.monitoring.yml  docker-compose.yml  turbo.json
Desktop/SGI/SGI_Project/apps/api/: Dockerfile  alembic.ini  conftest.py  pyproject.toml
apps/api/: Dockerfile  Dockerfile.studio  conftest.py  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: assurance.py  config.py  geocoding.py  geoip.py  infinity_signature.py  pdpl.py  route_deps.py  storage.py  test_assurance.py  test_geocoding.py  test_infinity_signature.py  test_metrics.py  test_rls_isolation.py
apps/api/app/middleware/: tenant.py  test_audit.py
apps/api/app/models/: accounting.py  agenda.py  bank.py  base.py  client.py  company.py  conversation.py  document_signature.py  favorite.py  floor.py  identity_assurance.py  inspection.py  message.py  notification.py  partner_commission.py  partner_service.py  party_tenant.py  party_vendor.py  property.py  property_submission.py  refresh_token.py  signature_proof.py  studio.py  user.py  workflow.py
apps/api/app/routers/: __init__.py
apps/api/app/routers/accounting/: schemas.py  test_accounting.py
apps/api/app/routers/acquisitions/: router.py  schemas.py  service.py
apps/api/app/routers/admin/: CLAUDE.md  __init__.py  deps.py  prometheus.py  router.py  security.py  studio.py  studio_ai.py  studio_schema.py  studio_templates.py  test_admin.py  test_admin_alerts.py  test_admin_backups.py  test_admin_infra.py  test_admin_users.py  test_security.py  test_studio.py  test_studio_templates.py  users.py
apps/api/app/routers/agenda/: router.py  test_agenda.py
apps/api/app/routers/ai_services/: __init__.py  schemas.py
apps/api/app/routers/auth/: oauth.py  router.py  schemas.py  service.py  test_auth.py  test_mfa.py
apps/api/app/routers/bank/: __init__.py  router.py  schemas.py
apps/api/app/routers/buildings/: __init__.py  router.py
apps/api/app/routers/client_portal/: router.py  service.py  test_client_needs.py  test_client_portal.py
apps/api/app/routers/clients/: __init__.py  ai_router.py  ai_schemas.py  ai_service.py  router.py  test_clients.py  test_clients_ai.py
apps/api/app/routers/comms/: router.py  service.py  test_comms.py
apps/api/app/routers/contracts/: contract_pdf.py  schemas.py  service.py  test_contracts.py
apps/api/app/routers/copilot/: CLAUDE.md  __init__.py  schemas.py  test_copilot_api.py
apps/api/app/routers/crm/: router.py  schemas.py  service.py
apps/api/app/routers/developers/: service.py  test_developers.py
apps/api/app/routers/documents/: router.py  test_documents.py
apps/api/app/routers/finance/: closure.py  invoice.py  service.py  test_finance.py
apps/api/app/routers/golden_visa/: schemas.py  service.py
apps/api/app/routers/honeytokens/: __init__.py  admin_router.py  models.py  router.py  schemas.py  service.py  test_honeytokens.py
apps/api/app/routers/iam/: assurance_deps.py  assurance_service.py  models.py  router.py  schemas.py  service.py  signature_service.py  test_assurance_deps.py  test_iam.py
apps/api/app/routers/inbox/: __init__.py  models.py  service.py  test_inbox_api.py  test_webhook.py  test_ws.py  webhook.py
apps/api/app/routers/inspections/: router.py  schemas.py  service.py  test_inspections.py
apps/api/app/routers/leasing/: models.py  router.py  service.py  test_leasing.py
apps/api/app/routers/maintenance/: __init__.py  router.py  schemas.py
apps/api/app/routers/marketing/: models.py  router.py  schemas.py  service.py  test_marketing.py
apps/api/app/routers/owner_portal/: __init__.py
apps/api/app/routers/owner_statements/: schemas.py  statement_pdf.py
apps/api/app/routers/owners/: __init__.py  router.py  schemas.py  service.py  test_owners.py
apps/api/app/routers/partner/: __init__.py
apps/api/app/routers/payments/: router.py  schemas.py  test_payments.py
apps/api/app/routers/pdc/: __init__.py  schemas.py  service.py  test_pdc.py
apps/api/app/routers/presence/: __init__.py  models.py  router.py  schemas.py  service.py  test_presence.py
apps/api/app/routers/properties/: schemas.py  service.py  test_properties.py
apps/api/app/routers/public_site/: __init__.py  admin_router.py  models.py  router.py  schemas.py  search.py  service.py  test_public_site.py
apps/api/app/routers/realestate_core/: __init__.py
apps/api/app/routers/rentals/: router.py
apps/api/app/routers/reporting/: __init__.py  test_reporting.py
apps/api/app/routers/sales/: router.py  test_sales.py
apps/api/app/routers/scenarios/: models.py  (+2 more)
apps/api/app/tasks/: alerts.py  audit.py  backups.py  celery_app.py  exports.py  maintenance.py  studio_orchestrator.py  telephony.py  test_backups.py  test_infra_control.py  test_notifications.py  test_studio_orchestrator.py  test_watcher.py  ticketing.py  watcher.py
apps/api/migrations/versions/: 0001_initial_schema.py  0005_client_partner_modules.py  0007_crm_lead_category.py  0008_user_preferred_language.py  0009_crm_lead_reference.py  0010_fournisseur_kyc.py  0011_vendor_docs_missions.py  0013_maintenance_tickets.py  0015_conversations.py  0017_mfa.py  0018_inspections.py  0024_contract_renewal_signature.py  0025_owner_statements.py  0025_reference_composite_unique.py  0026_merge_0025.py  0027_refresh_tokens.py  0028_notifications_type_index.py  0029_calls_channel_unique.py  0029_child_company_indexes.py  0031_omnichannel_inbox.py  0032_service_tickets.py  0033_acquisitions.py  0034_sales.py  0035_leasing.py  0036_iam.py  0037_developers.py  0039_source_imports.py  0043_video_scenarios.py  0045_inbox_channel_configs.py  0046_scenario_video_object_key.py  0048_admin_console.py  0049_device_tokens.py  0050_bank_reconciliation.py  0054_finance_period_closure.py  0055_agenda_events.py  0057_finance_dunning_events.py  0060_signature_proofs.py  0061_public_site_design.py  0062_honeytokens.py  0063_user_oauth_link.py  (+4 more)
apps/api/scripts/: seed.py  seed_realestate.py  seed_sale_demo.py  seed_social_demo.py  seed_studio_demo.py
(+1169 files in other folders)
