[project]
name = "sgi-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.30.0",
    "uvloop>=0.21.0",
    "httptools>=0.6.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "geoalchemy2>=0.15.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "bcrypt<5.0.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "minio>=7.2.0",
    "playwright>=1.44.0",
    "curl-cffi>=0.7.0",
    "pyotp>=2.9.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A"]
# S101: asserts autorisés (tests).
# A002: les filtres FastAPI nommés `type` (Query) shadowent le builtin — idiome assumé.
# E501 est désormais géré par `ruff format` (longueur 100) → réactivé dans le gate.
ignore = ["S101", "A002"]

[tool.ruff.lint.per-file-ignores]
# Les tests s'autorisent : lignes longues (données/HTML d'exemple), imports
# après set-up (E402), pytest.raises(Exception) (B017), faux secrets (S105/S106),
# random non-crypto (S311), try/except/pass (S110), noms shadowant des builtins.
"**/test_*.py" = ["E501", "E402", "B017", "S105", "S106", "S311", "S110", "A001", "A002"]
# DATABASE_URL / APP_DATABASE_URL sont des @property "constantes" (UPPER_CASE assumé).
"app/core/config.py" = ["N802"]
# Prompts LLM en chaînes triple-quotées (lignes longues non cassables sans altérer le prompt).
"app/core/gemini.py" = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# Les injecteurs FastAPI s'utilisent volontairement comme valeurs par défaut
# d'arguments (Depends/Query/…) — ce n'est pas le piège B008 visé.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
]

[tool.mypy]
strict = true
python_version = "3.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "app/routers"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["app"]
omit = ["*/test_*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 80
